--- a/src/components/button/style/index.scss
+++ b/src/components/button/style/index.scss
@@ -1,6 +1,10 @@
-$prefix:md;
+// author:储奎
+// date: 2017.01.17
+@import './mixin';
+@import '../../style/themes/theme.scss';
+$prefix:md-btn;
 
-.#{$prefix}-btn{
+.#{$prefix}{
     display: inline-block;
     margin-bottom: 0;
     font-weight: 500;
@@ -19,10 +23,30 @@ $prefix:md;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    // -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    // transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
     position: relative;
-    color: rgba(0, 0, 0, 0.65);
+    color: $textColor;
     background-color: #f7f7f7;
     border-color: #d9d9d9;
+    &-lg{
+        padding: 4px 15px 5px 15px;
+        font-size: 14px;
+        border-radius: 4px;
+    }
+     &-sm{
+        padding: 1px 7px;
+        font-size: 12px;
+        border-radius: 2px;
+    }
+    &-primary{
+        color: #fff;
+        background-color: getColor('color500');
+        border-color: getColor('color500');
+        &:hover{
+            background-color: getColor('color300');
+            border-color: getColor('color300');
+        }
+    }
 }
+
