add modal READEME.md

--- a/src/components/modal/style/index.scss
+++ b/src/components/modal/style/index.scss
@@ -1,23 +1,29 @@
 $modalPrefix:md;
-
-.#{$modalPrefix}-modal{
+.#{$modalPrefix}-modal {
     position: fixed;
     width: 100%;
     height: 100%;
     z-index: 1000;
     top: 0;
 }
-.#{$modalPrefix}-mask{
+
+.#{$modalPrefix}-mask {
     position: fixed;
-    width: 100%;height: 100%;top:0;
-    background-color: rgba(0, 0, 0,0.65)
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.65)
 }
-.#{$modalPrefix}-alert{
-    position: fixed;
-    top: 0;left: 0;right: 0;bottom: 0;
-    margin: auto;
+
+.#{$modalPrefix}-alert {
+    position: relative;
+    top: 100px;
+  
+    margin: 0 auto;
     width: 300px;
-    height: 200px;
+    min-height: 200px; 
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 1px 1px #666;
