--- a/src/components/modal/style/index.scss
+++ b/src/components/modal/style/index.scss
@@ -1,10 +1,15 @@
-$modalPrefix:md;
-.#{$modalPrefix}-modal {
+$modalPrefix:md-modal;
+.#{$modalPrefix} {
     position: fixed;
     width: 100%;
     height: 100%;
     z-index: 1000;
+    transition: all 1s linear;
     top: 0;
+}
+
+.#{$modalPrefix}-hidden {
+    display: none;
 }
 
 .#{$modalPrefix}-mask {
@@ -17,15 +22,80 @@ $modalPrefix:md;
     background-color: rgba(0, 0, 0, 0.65)
 }
 
-.#{$modalPrefix}-alert {
+.#{$modalPrefix}-frame {
+    transition: all 1s linear;
+    display: block;
     position: relative;
     top: 100px;
-  
     margin: 0 auto;
-    width: 300px;
-    min-height: 200px; 
+    width: 500px;
+    min-height: 100px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 1px 1px #666;
-    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transform: scale(1, 1);
+}
+
+.#{$modalPrefix}-content {
+    padding: 20px 30px;
+    line-height: 1.5;
+    &::after{
+        content: '';display: block;
+        zoom:1;clear: both
+    }
+}
+
+.#{$modalPrefix}-closer {
+    position: absolute;
+    padding: 0;
+    right: 14px;
+    top: 14px;
+    width: 14px;
+    height: 14px;
+    i {
+        font-size: 14px;
+        margin: 0;
+        padding: 0
+    }
+}
+
+.#{$modalPrefix}-header {
+    padding: 14px 16px;
+    border-bottom: 1px solid #e9e9e9
+}
+
+.#{$modalPrefix}-title {
+    line-height: 21px;
+    color: #000;
+    font-size: 14px;
+}
+
+.#{$modalPrefix}-dialog-title {
+    margin-left: 14px;
+    font-weight: bold;
+}
+
+.#{$modalPrefix}-dialog-content {
+    padding: 10px 38px;
+    color: rgba(0, 0, 0, 0.65);
+    font-size: 12px;
+}
+.#{$modalPrefix}-dialog-footer{
+    float: right;margin:25px 0 0 0;
+    & button{
+        margin-left: 10px
+    }
+}
+.#{$modalPrefix}-icon-question {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #ffbf00;
+    color: #fff
+}
+
+.#{$modalPrefix}-dialog-body {
+    i {
+        float: left
+    }
 }
